reports/exemple.log
Traceback (most recent call last):
  File "/home/ubuntu/miniconda3/envs/jupybook/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/ubuntu/miniconda3/envs/jupybook/lib/python3.9/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/ubuntu/miniconda3/envs/jupybook/lib/python3.9/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/ubuntu/miniconda3/envs/jupybook/lib/python3.9/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/home/ubuntu/miniconda3/envs/jupybook/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/home/ubuntu/miniconda3/envs/jupybook/lib/python3.9/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/home/ubuntu/miniconda3/envs/jupybook/lib/python3.9/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/ubuntu/miniconda3/envs/jupybook/lib/python3.9/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import pandas as pd
import numpy as np
Vser = np.array([18, 24, 30, 34, 40, 50, 60])
Umin = np.array([5.67 4.36 3.58 3.22 2.85 2.34 2.02])
Umax = np.array([5.74 4.46 3.75 3.34 2.91 2.48 2.18])

donnees = pd.DataFrame(
    {
        "Vser(mL)": ["{:.0f}".format(val) for val in Vser],
        "Umin(V)": ["{:.2f}".format(val) for val in Umin],
        "Umax(V)": ["{:.2f}".format(val) for val in Umax],
    }
)

donnees.style
------------------

[0;36m  File [0;32m"<ipython-input-1-fe7b39152687>"[0;36m, line [0;32m4[0m
[0;31m    Umin = np.array([5.67 4.36 3.58 3.22 2.85 2.34 2.02])[0m
[0m                          ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-fe7b39152687>, line 4)

